<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity_registro">

    <LinearLayout
        android:layout_width="257dp"
        android:layout_height="247dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="31dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextoRegistro"
            android:textColor="#000000"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/reg_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#090909"
            android:ems="10"
            android:hint="@string/HintUsuario"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#090909" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#090909"
            android:ems="10"
            android:hint="@string/HintContraseña"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#000000"
            android:textColorHint="#090909" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#0029FF"
            android:onClick="enviar"
            android:text="@string/BotonRegistro"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>