<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo_pantalla_menu_prueba"
    android:visibility="visible"
    tools:context=".Activity_menu">

    <TableLayout
        android:layout_width="372dp"
        android:layout_height="546dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton2"
                style="@android:style/Widget.DeviceDefault.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:backgroundTint="#00FBFBFB"
                android:onClick="men_comunidad"
                app:srcCompat="@mipmap/icon_comunidad2"
                tools:ignore="SpeakableTextPresentCheck" />

            <Space
                android:layout_width="100dp"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:background="#03FFFFFF"
                android:backgroundTint="#00FFFFFF"
                android:onClick="men_venta"
                app:srcCompat="@mipmap/icon_venta"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/TextoComunidad"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Space
                android:layout_width="100dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/TextoVenta"
                android:textColor="#000000"
                android:textSize="20sp" />
        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:backgroundTint="#00FFFFFF"
                android:onClick="men_logistica"
                app:srcCompat="@mipmap/icon_logistica" />

            <Space
                android:layout_width="100dp"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:backgroundTint="#00FFFFFF"
                android:onClick="men_reporte"
                app:srcCompat="@mipmap/icon_reporte" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/TextoLogistica"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Space
                android:layout_width="100dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/TextoReporte"
                android:textColor="#000000"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>